# lakes

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: regions.toml
data/manifests/: hunan_browser_data.md
data/processed/analysis/: hunan_buffer_center_nearest_osm_hydrolakes.csv  hunan_buffer_center_vs_osm_hydrolakes.csv
data/processed/esa_polygons/hn_osm_1462005/: esa_water.geojson
data/processed/jrc_polygons/hn_osm_1462005/: jrc_occurrence_ge50.geojson  jrc_occurrence_ge75.geojson  jrc_occurrence_ge90.geojson
scripts/: build_lake_metadata.py  download_sentinel.py  download_sentinel_tile_index.py  precompute_esa_polygons.py  precompute_jrc_polygons.py  prepare_data.py  run_dev.sh
src/lakes_browser/: __init__.py  region_config.py  sentinel_download.py  server.py
src/lakes_browser/static/: app.js  index.html  styles.css
