[project]
name = "lakes"
version = "0.1.0"
description = "Local web GIS browser for Hunan lake imagery and water polygons."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "Pillow>=10.0",
  "geopandas>=1.0",
  "pyogrio>=0.8",
  "pyproj>=3.6",
  "rasterio>=1.3",
  "requests>=2.31",
  "shapely>=2.0",
]

[project.scripts]
lakes-browser = "lakes_browser.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lakes_browser = ["static/*"]
